<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_dialog_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearlayout_dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_info_padding"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearlayout_dialog_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageview_dialog_info_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/imageview_dialog_info_title_icon_padding"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_app" />

            <TextView
                android:id="@+id/textview_dialog_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_title_margin_top"
                android:padding="@dimen/textview_dialog_info_title_padding"
                android:textStyle="bold"
                android:text="@string/app_name" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/gridlayout_dialog_info_build_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gridlayout_dialog_info_build_info_margin_top"
            android:columnCount="2">

            <TextView
                android:id="@+id/textview_dialog_info_version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_version_label_margin_top"
                android:padding="@dimen/textview_dialog_info_version_label_padding"
                android:layout_row="0"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/label_dialog_info_version" />

            <TextView
                android:id="@+id/textview_dialog_info_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_version_margin_top"
                android:padding="@dimen/textview_dialog_info_version_padding"
                android:textStyle="normal"
                android:layout_row="0"
                android:layout_column="1"
                android:text="" />

            <TextView
                android:id="@+id/textview_dialog_info_build_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_build_type_label_margin_top"
                android:padding="@dimen/textview_dialog_info_build_type_label_padding"
                android:layout_row="1"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/label_dialog_info_build_type" />

            <TextView
                android:id="@+id/textview_dialog_info_build_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_build_type_margin_top"
                android:padding="@dimen/textview_dialog_info_build_type_padding"
                android:layout_row="1"
                android:layout_column="1"
                android:textStyle="normal"
                android:text="" />

            <TextView
                android:id="@+id/textview_dialog_info_system_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_system_label_margin_top"
                android:padding="@dimen/textview_dialog_info_system_label_padding"
                android:layout_row="2"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/label_dialog_info_system" />

            <TextView
                android:id="@+id/textview_dialog_info_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_info_system_margin_top"
                android:padding="@dimen/textview_dialog_info_system_padding"
                android:textStyle="normal"
                android:layout_row="2"
                android:layout_column="1"
                android:text="" />

        </GridLayout>

        <TextView
            android:id="@+id/textview_dialog_info_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/textview_dialog_info_copyright_margin_top"
            android:padding="@dimen/textview_dialog_info_copyright_padding"
            android:textStyle="normal"
            android:textSize="@dimen/textview_dialog_info_copyright_text_size"
            android:text="" />

        <TextView
            android:id="@+id/textview_dialog_info_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/textview_dialog_info_license_padding"
            android:textStyle="normal"
            android:textSize="@dimen/textview_dialog_info_license_text_size"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/text_dialog_info_license" />

        <TextView
            android:id="@+id/textview_dialog_info_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/textview_dialog_info_github_padding"
            android:textStyle="normal"
            android:textSize="@dimen/textview_dialog_info_github_text_size"
            android:autoLink="web"
            android:text="@string/text_dialog_info_github" />

        <ImageView
            android:id="@+id/imageview_dialog_info_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/imageview_dialog_info_ok_padding_top"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_info_ok"
            app:srcCompat="@drawable/icon_ok_selector" />
    </LinearLayout>
</ScrollView>