...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_raw_text_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_raw_text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="normal"
            android:text="" />

...
